refactor(option): 미사용 Collectors를 Java 16+ .toList()로 교체
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>