@@ -5,7 +5,6 @@ import gift.product.ProductRepository;
 import jakarta.validation.Valid;
 import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -39,7 +38,7 @@ public class OptionController {
         }
         final List<OptionResponse> options = optionRepository.findByProductId(productId).stream()
                 .map(OptionResponse::from)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(options);
     }
 
